// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarReducer should handle specific defined types: defined type SET_ACTIVE_FILTERS 1`] = `
Object {
  "result": Object {
    "filters": Object {
      "test_id": Object {
        "activeFilters": Set {
          "lorem",
        },
      },
    },
  },
  "type": "SET_ACTIVE_FILTERS",
}
`;

exports[`ToolbarReducer should handle specific defined types: defined type SET_FILTER_TYPE 1`] = `
Object {
  "result": Object {
    "filters": Object {
      "test_id": Object {
        "currentFilter": "lorem",
      },
    },
  },
  "type": "SET_FILTER_TYPE",
}
`;
